--- a/index.html
+++ b/index.html
@@ -8,5 +8,19 @@
 </head>
 <body>
 
+  <header>
+    <h1><img src="images/dinos-r-us.svg" alt="Dinos 'R' Us"></h1>
+  </header>
+
+  <main>
+
+    <h2>Hadrosaur</h2>
+    <figure>
+      <img src="images/hadrosaur.jpg" alt="">
+      <figcaption></figcaption>
+    </figure>
+
+  </main>
+
 </body>
 </html>
